--- a/style.css
+++ b/style.css
@@ -2,9 +2,18 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Nunito', sans-serif;
 }
 
 img {
-    max-width: 100vw;
+    width: 200px;
+}
+
+article {
+    max-width: 50vw;
+    text-align: justify;
 }
