--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+#app {
     margin: 0;
     width: 100vw;
     height: 100vh;
@@ -7,10 +7,16 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Nunito', sans-serif;
+    text-align: center;
 }
 
-img {
+#avatar {
     width: 200px;
+    cursor: pointer;
+}
+
+#avatar.large {
+    width: 80vw;
 }
 
 article {
