--- a/style.css
+++ b/style.css
@@ -4,15 +4,78 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     font-family: 'Nunito', sans-serif;
     text-align: center;
 }
 
+@media print {
+    #app {
+        justify-content: flex-start;
+    }
+}
+
+header {
+    display: flex;
+    justify-content: flex-start;
+    text-align: left;
+}
+
+header > div {
+    padding-left: 16px;
+}
+
+h1 {
+    margin-top: 4px;
+    margin-bottom: 8px;
+}
+
+h2 {
+    margin-top: 0;
+    margin-bottom: 6px;
+    font-size: 14pt;
+    color: #7e7e7e;
+    font-weight: 300;
+}
+
+@media (min-width: 800px) {
+    header {
+        width: 768px;
+    }
+}
+
+.abstract {
+    margin-left: 8px;
+}
+
+.abstract > .tile {
+    display: inline-block;
+    width: 220px;
+}
+
+.abstract > div > * {
+    display: inline-block;
+}
+
+.abstract .label {
+    color: #7e7e7e;
+}
+
+.abstract .value {
+    color: black;
+    text-decoration: none;
+}
+
+.abstract .label::after {
+    content: ': ';
+}
+
 #avatar {
     width: 200px;
+    height: 200px;
     cursor: pointer;
+    margin-bottom: 8px;
 }
 
 #avatar.large {
@@ -20,6 +83,32 @@
 }
 
 article {
-    max-width: 50vw;
+    max-width: 768px;
     text-align: justify;
+    border-top: 1px solid rgba(126, 126, 126, 0.3);
+    margin-top: 8px;
+    padding-top: 12px;
+}
+
+button.export {
+    background-color: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.6);
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button.export:hover {
+    border-color: rgba(0, 0, 0, 0.6);
+    color: black;
+}
+
+dt {
+    font-size: 14pt;
+    margin-bottom: 8px;
+    font-weight: 700;
+}
+
+dd {
+    margin-left: 0;
 }
