--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 #app {
-    margin: 0;
+    position: absolute;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     font-family: 'Nunito', sans-serif;
     text-align: center;
 }
@@ -48,6 +48,17 @@ h3 {
 @media (min-width: 800px) {
     header {
         width: 768px;
+    }
+}
+
+@media (max-width: 510px) {
+    header {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    h1, header h2 {
+        text-align: center;
     }
 }
 
@@ -116,14 +127,24 @@ dt {
     margin-bottom: 8px;
     font-weight: 700;
     margin-top: 16px;
-    padding-top: 8px;
-    border-top: 1px solid rgba(126, 126, 126, 0.3);
+    padding-bottom: 4px;
+    border-bottom: 1px solid rgba(126, 126, 126, 0.3);
 }
 
 dd {
     margin-left: 0;
 }
 
-v-cloak {
+@media (max-width: 799px) {
+    dt {
+        padding-left: 12px;
+    }
+
+    dd {
+        padding: 0 12px;
+    }
+}
+
+[v-cloak] {
     display: none;
 }
