--- a/style.css
+++ b/style.css
@@ -193,3 +193,7 @@ dd {
 [itemprop="description"] ul li:last-child::after {
     content: "";
 }
+
+[itemprop="description"] ul li a:hover {
+    color: blue;
+}
