--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ article > dl > dd {
     height: 100vh;
     background-color: white;
     flex-direction: column;
+    transition: 500ms opacity linear;
 }
 
 #hired a {
