--- a/style.css
+++ b/style.css
@@ -228,6 +228,10 @@ article > dl > dd {
     display: flex;
     justify-content: center;
     align-items: center;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
     background-color: white;
