--- a/docs/web/hello/style.css
+++ b/docs/web/hello/style.css
@@ -31,7 +31,7 @@ textarea {
     border-width: 1px;
     border-color: black;
     border-style: solid;
-    border-radius: 4px;
+    border-radius: 0;
     margin-bottom: 12px;
 }
 
